syntax = "proto3";

package logcache;

import "v2/envelope.proto";
import "google/api/annotations.proto";

// The egress service is used to read data from the LogCache system.
service Egress {
    rpc Read(ReadRequest) returns (ReadResponse) {
        option (google.api.http) = {
            get: "/v1/read/{source_id}"
        };
    }
    rpc Meta(MetaRequest) returns (MetaResponse){
        option (google.api.http) = {
            get: "/v1/meta"
        };
    }
}

message ReadRequest {
    string source_id = 1;
    int64 start_time = 2;
    int64 end_time = 3;
    int64 limit = 4;
    EnvelopeTypes envelope_type = 5;
    bool descending = 6;
}

enum EnvelopeTypes {
    ANY = 0;
    LOG = 1;
    COUNTER = 2;
    GAUGE = 3;
    TIMER = 4;
    EVENT = 5;
}

message ReadResponse {
    loggregator.v2.EnvelopeBatch envelopes = 1;
}

message MetaRequest {
    bool local_only = 1;
}

message MetaResponse {
    map<string, MetaInfo> meta = 1;
}

message MetaInfo {
}
